tests/src/main/java/org/hibernate/beanvalidation/tck/tests/constraints/validatorresolution/SubClassG.java
/**
 * Jakarta Validation TCK
 *
 * License: Apache License, Version 2.0
 * See the license.txt file in the root directory or <http://www.apache.org/licenses/LICENSE-2.0>.
 */
package org.hibernate.beanvalidation.tck.tests.constraints.validatorresolution;

/**
 * @author Guillaume Smet
 */
public class SubClassG extends BaseClass {

}
